required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk): 
---------------------------- 

- fix GEOMTRANSFORM rotation orientation for vector symbols (#3802)

- GD Driver broken in FastCGI (#3813)

- configure: look for libexslt.so under lib64 as well

- Coding style and formatting fixes (#3819, #3820, #3821, and more)

- More improvements to OpenGL error handling (#3791)

Version 6.0.0-beta5 (2011-04-06)
--------------------------------

- Fix setting of top-level mapObj member variables in PHP MapScript (#3815)

- More robust OpenGL context creation on older video cards and drivers (#3791)

- Allow users to set the maximum number of vector features to be drawn (#3739)

- Fixed FCGI on Windows problem related to lexer (#3812)

- KML: Add ows/kml_exclude_items (#3560)

- Removed all refs left to MS_SYMBOL_CARTOLINE (#3798)

- Removed GAP, PATTERN, LINECAP/JOIN and POSITION from symbolObj (#3797)

- Fixed handling of STYLEITEM AUTO label position codes 10,11,12 (#3806)

- Fixed msGEOSGeometry2Shape to handle 'GEOMETRYCOLLECTION EMPTY' 
  as null geometry instead of raising an error (#3811)

- Re-added the MYSQL JOIN support. Had been removed with the MYGIS 
  deprecated driver.

- Add opacity to legend (#3740)

- Updated PHP/MapScript with the new objects properties (#3735)

- KML: set layer's projection when it is not defined (#3809)

- Updated xml mapfile schema and xsl with the new lexer properties (#3735)

- Updated PHP/MapScript for MS RFC 69: clustering. (#3700)

- Move allocation of cgiRequestObj paramNames/Values to msAllocCgiObj() (#1888)

- Add support for simple aggregates for the cluster layer attributes (#3700)

- Improved error reporting in msSaveImage() (#3733)
